--- a/samples/BinaryPack.Benchmark/BinaryPack.Benchmark.csproj
+++ b/samples/BinaryPack.Benchmark/BinaryPack.Benchmark.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apex.Serialization" Version="1.3.3" />
     <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
     <PackageReference Include="MessagePack" Version="1.8.74" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
